Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23030

ARM crash on Raspberry Pi 4

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • 10.5.0, 10.5.4, 10.5(EOL)
    • 10.5.5
    • Compiling, Packaging
    • Raspberry Pi 4
      Ubuntu 19.10 aarch64

    Description

      After update from 10.4.x to 10.5.4 mariadb crashes with an "illegal instruction" signal.

      The offending instruction is in the function crc32c_aarch64:

      0x0000000000e2eadc <+1204>: pmull v2.1q, v2.1d, v3.1d
      see https://github.com/MariaDB/server/blob/0d6d63e1505bbf9898d46fa641a7a0579a4ae460/mysys/crc32/crc32_arm64.c#L202

      I'm using the Docker image which pulls the arm64 binary deb distribution.

      I'm not entirely sure wheher this is intended behaviour (i.e. whether Raspberry Pi is simply no longer supported in 10.5.x binary distribution).

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              wettlinger Wolfgang Ettlinger
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.